--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 </head>
 <body>
   <!-- your content here... -->
+  <div>
+    <h1>happy times</h1>
+    <h2>happy times but smol</h2>
+    <h6>happy times but smoller</h6>
+  </div>
+  <p>paragraphs are cool</p>
+  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">i insist that u click on this</a>
+  <button>Click me</button>
+
+  <ul>
+    <li>Bullet point 1</li>
+    <li>number 2</li>
+  </ul>
+
+  <ol>
+    <li>Bullet point 1</li>
+    <li>number 2</li>
+  </ol>
+
+  <form>
+    <input />
+    <button>Submit!!</button>
+  </form>
   <script src="js/scripts.js"></script>
 </body>
 </html>
